<resources>
    <string name="app_name">Codearn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kirish">KIRISH</string>
    <string name="enter_phone_number_reason">Ilovaga kirish uchun telefon\nraqamingizni kiriting</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Telefon raqam</string>
    <string name="enter_verification_code">Tasdiqlash kodini kiriting</string>
    <string name="tasdiqlash">TASDIQLASH</string>
    <string name="phone_number_example">Masalan: +998912345678</string>
    <string name="verification_code">Tasdiqlash kodi</string>
    <string name="back">Orqaga</string>
    <string name="enter_verification_code_clearance">Codearn ilovasidan %1$s raqamiga yuborilgan tasdiqlash kodini kiriting.</string>
    <string name="resend_verification_code_count">Kodni qayta yuborish (%1$s)</string>
    <string name="paths">Yo\'nalishlar</string>
    <string name="sahifalar">Sahifalar</string>
    <string name="bosh_sahifa">Bosh sahifa</string>
    <string name="yetakchilar">Yetakchilar</string>
    <string name="profil">Profil</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="yordam">Yordam</string>
    <string name="ilova_haqida">Ilova haqida</string>
    <string name="profile_image">Profile image</string>
    <string name="star">Star</string>
    <string name="show_me">Meni ko\'rsatish</string>
    <string name="profile_picture">Profile picture</string>
    <string name="medal">Medal</string>
    <string name="telegram_kanal">Telegram kanal</string>
    <string name="logout">Chiqish</string>
    <string name="delete_profile">Profilni o\'chirish</string>
    <string name="learn_programming_with_us">Eng talabgir dasturlash tillarini biz bilan o\'rganing</string>
    <string name="read">O\'qish</string>
    <string name="edit">Edit</string>
    <string name="about_codearn">Codearn haqida</string>
    <string name="what_is_codearn">Codearn qanday ilova?</string>
    <string name="what_is_codearn_answer">Codearn - yosh-u qariga dasturlashni o\'rgatuvchi mobil ilova. Ushbu ilova yordamida siz hozirgi kundagi eng talabgir dasturlash tillarini o\'rganishingiz mumkin.</string>
    <string name="why_should_i_learn_from_this_app">Nega dasturlashni bu ilovadan o\'rganishim kerak?</string>
    <string name="why_should_i_learn_app_answer">Qayerda bo\'lishingizdan qat\'iy nazar, siz ilovamiz orqali dasturlashni xohlagan paytingiz bepul o\'rganishingiz mumkin. Internetingiz bo\'lsa kifoya.</string>
    <string name="enter_your_name">Ismingizni kiriting</string>
    <string name="name">Ism</string>
    <string name="choose_profile_pic">Profil rasmingizni tanlang</string>
    <string name="save">Saqlash</string>
    <string name="keyingi">Keyingi</string>
    <string name="next">next</string>
    <string name="try_again">Qayta urinish</string>
    <string name="congratulations_text">Tabriklaymiz, siz 10 ta savoldan <b>%1$d</b> tasiga to\'gri javob berdingiz!</string>
    <string name="plus">+</string>
</resources>