<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_send_otp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#335C7D"
        tools:context=".ui.auth.SendOTPActivity">

        <TextView
            android:id="@+id/enter_verification_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/enter_verification_code"
            android:textColor="@color/white_60_alpha"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".15" />

        <TextView
            android:id="@+id/enter_verification_code_clearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white_60_alpha"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_verification_code_tv"
            tools:text="Codearn ilovasidan +998 970000000 raqamiga yuborilgan tasdiqlash kodini kiriting." />

        <TextView
            android:id="@+id/resend_code_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white_60_alpha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_verification_code_clearance"
            tools:text="Kodni qayta yuborish (2:00)" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verification_code_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resend_code_count_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verification_code_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/verification_code"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/mazarine_blue"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/back_button_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verification_code_input_container" />

        <TextView
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#00ACEE"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/tasdiqlash"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>