<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        tools:context=".ui.main.finishtest.FinishTestActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#14FFFFFF"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toTopOf="@+id/go_to_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/results_pie_chart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/congratulations_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/white_60_alpha"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/results_pie_chart"
                    tools:text="Tabriklaymiz, siz 10 ta savoldan 5 tasiga to'gri javob berdingiz!" />

                <ImageView
                    android:id="@+id/star_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/earned_score"
                    app:layout_constraintStart_toEndOf="@id/plus_symbol"
                    app:layout_constraintTop_toBottomOf="@+id/congratulations_text"
                    app:tint="@color/gold" />

                <TextView
                    android:id="@+id/plus_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/plus"
                    android:textColor="@color/white_60_alpha"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="@+id/star_img"
                    app:layout_constraintEnd_toStartOf="@+id/star_img"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/star_img" />

                <TextView
                    android:id="@+id/earned_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="@+id/star_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/star_img"
                    app:layout_constraintTop_toTopOf="@+id/star_img"
                    tools:text="60" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/bosh_sahifa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/try_again_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_again_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/try_again"
            android:theme="@style/TryAgainButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/go_to_home"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>